style(index.css-menu.module): correct color text + gap icon

--- a/src/features/searchGithubName/components/menus/menu.module.css
+++ b/src/features/searchGithubName/components/menus/menu.module.css
@@ -1,4 +1,4 @@
 .wrapper_icons_right {
     display: flex;
-    gap: var(--space-primary);
+    gap: 1rem;
 }
