--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --color-tertiary: #04a1ff;
   
   /* Text Colors */
-  --color-text-primary: #000000;
+  --color-text-primary: #212121;
   --color-text-secondary: #292828;
 
   /* Border radius */
